# data-quality-dashboard

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  REPORT.md  SECURITY_REPORT.md  docker-compose.yml  example-claude.md  main.py  pyproject.toml
.github/workflows/: ci.yml
data/: sales.csv
docs/: openapi.yaml
docs/bruno/: 01-health.bru  02-validate-upload.bru  03-validate-path.bru  04-summary.bru  05-search.bru  06-history.bru  bruno.json
docs/bruno/environments/: docker.bru  local.bru
nginx/: nginx.conf
scripts/: gen_certs.sh
src/: api.py  config.py  logging_config.py  pipeline.py  schemas.py  search.py
src/routers/v1/: __init__.py  meta.py  pipeline.py  search.py
tests/: pentest_whitebox.py  test_pipeline.py
